--- a/ansible/roles/balancer/tasks/config.yml
+++ b/ansible/roles/balancer/tasks/config.yml
@@ -1,12 +1,12 @@
 ---
 - name: Remove default Nginx config ...
   file: >
-    path=/etc/nginx/sites-enabled/default state=absent
+    path=/etc/nginx/conf.d/default.conf state=absent
 
 - name: Copy configuration into place ...
   template: >
     src=vhost.j2
-    dest=/etc/nginx/sites-enabled/{{item.name}}.conf
+    dest=/etc/nginx/conf.d/{{item.name}}.conf
   with_items: "{{balancer_vhosts}}"
   notify: restart nginx
 
