--- a/ansible/roles/balancer/tasks/main.yml
+++ b/ansible/roles/balancer/tasks/main.yml
@@ -1,5 +1,13 @@
 # Installs and configure nginx as a load balancer
 ---
+- name: Include OS-specific variables ...
+  include_vars: "{{ ansible_os_family }}.yml"
+  when: ansible_distribution != 'Ubuntu' and ansible_distribution != 'CentOS'
+
+- name: Include version-specific variables for Ubuntu and CentOS...
+  include_vars: "{{ansible_distribution}}.yml"
+  when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'CentOS'
+
 # Install tasks
 - include: setup-Debian.yml
   when: ansible_os_family == 'Debian'
