--- a/ansible/roles/balancer/tasks/setup-RedHat.yml
+++ b/ansible/roles/balancer/tasks/setup-RedHat.yml
@@ -1,10 +1,13 @@
 ---
-- name: Install epel-release ...
-  yum: >
-    name=epel-release
-    state=latest
+- name: Install Nginx Repo ...
+  yum_repository:
+    name: nginx
+    description: Official Nginx Repository
+    baseurl: "{{nginxRepoUrl}}"
+    gpgcheck: no
 
 - name: Install nginx ...
   yum: >
     name=nginx
     state=latest
+    update_cache=yes
